.scratch/research/evidence/typecheck_perf/results/neg_error_row.err
File "scratch/typecheck_perf/neg_error_row.ml", line 4, characters 2-19:
4 |   Tp_m03.program ()
      ^^^^^^^^^^^^^^^^^
Error: This expression has type
         (< audit_log : int -> int; billing_charge : int -> int;
            billing_refund : int -> int; cache_get : int -> int;
            cache_set : int -> int; clock_now : int -> int;
            order_read : int -> int; order_write : int -> int;
            user_read : int -> int; user_write : int -> int; .. >,
          [> `External of 'a | `Validation of string ], int)
         Effect.t
       but an expression was expected of type
         (< audit_log : int -> int; billing_charge : int -> int;
            billing_refund : int -> int; cache_get : int -> int;
            cache_set : int -> int; clock_now : int -> int;
            order_read : int -> int; order_write : int -> int;
            user_read : int -> int; user_write : int -> int; .. >,
          [ `Only ], int)
         Effect.t
       The second variant type does not allow tag(s) `External, `Validation
